#ifndef CLOCKPENDULUM_H
#define CLOCKPENDULUM_H

#include <list>
#include <string>
#include "DataTupel.h"
#include "DataTransfer.h"
#include "DataAssembler.h"

class ClockPendulumAnalyzer {
    public:
        ClockPendulumAnalyzer(std::string clockname);
        void startAnalyze();
    private:
        const int MAXDATATUPEL = 5;
        std::list<DataTupel> m_DataList;
        DataTransfer m_DataTransfer;
        std::string m_ClockName;
        DataAssembler m_DataAssembler;
        //IRESTService m_RestService; //TODO implement REST Service
};

#endif
