@startuml
''classes
class ClockPendulumAnalyzer {
    +main()
}
class GPIO 
class WebServer
class DataAssembler {
    m_LatestData :DataTupel
    m_TimeList :List<Pair<string,int>>
    +getNewDataSample(string clockname) :DataTupel
}
class DataTransfer {
    m_Persistor :IDataPersistor
    getDataListByName(string name) :List<DataTupel>
    getDataListByDate(string date) :List<DataTupel>
    saveDataList(List<DataTupel>) :void
}
class DataTupel {
    m_clockname :string
    m_data :string
    m_absolutetime_ns:double
    m_heat :int
    m_humidity :int
}
class SQLiteImplementation
class UARTHandler
class UARTReceiver

''interfaces
interface IRESTServer
interface IDataPersistor {
    m_DBConnection :db
    getDataByName(string name) :List<DataTupel>
    getDataByDate(int date) :List<DataTupel>
    saveData(DataTupel data) :void
}

interface IDBConnector {
    m_Connection
    connect(string path)
    disconnect()
}

interface IObserver {
    addToList(string timeKey, int absoluteTime)
}

''relations
ClockPendulumAnalyzer --> GPIO
''IObserver <|.down. DataAssembler :implements
DataAssembler .down.|> IObserver :implements
ClockPendulumAnalyzer --> UARTReceiver
UARTHandler <- UARTReceiver
IObserver <-- UARTReceiver

'' main assoziations
ClockPendulumAnalyzer -right-> DataTransfer
ClockPendulumAnalyzer -right-> DataAssembler
ClockPendulumAnalyzer --> IRESTServer :starts

'' who requires DataTupel
DataTupel <-- ClockPendulumAnalyzer
DataTupel <- DataAssembler
DataTupel <-- IDataPersistor
DataTupel <-- DataTransfer

'' DB relations
IDataPersistor <- DataTransfer :uses
IDBConnector <- DataTransfer :uses
SQLiteImplementation .|> IDBConnector :implements
SQLiteImplementation ..|> IDataPersistor :implements


WebServer .up.|> IRESTServer :implements

''connections for proper placement (all are hidden)
WebServer <-[hidden] UARTHandler
IDBConnector <-[hidden]down- IDataPersistor
@enduml
